--- a/_works.sass
+++ b/_works.sass
@@ -5,11 +5,16 @@
         color: #36b3bd
         margin-bottom: 60px
     .box
+        display: flex
+        align-items: center
+        flex-direction: column
         .mediabox
             display: flex
             align-items: center
             flex-direction: column
         .imgbox
+            display: flex
+            justify-content: center
             width: 75%
         .textbox
             padding: 35px 55px
