--- a/_support.sass
+++ b/_support.sass
@@ -1,4 +1,10 @@
 #support
+    .box
+        height: 100%
+        background-color: #35b6c1
+        display: flex
+        flex-direction: column
+        justify-content: center
     .textbox
         width: 100%
         h1
@@ -15,24 +21,25 @@
             background-color: #ffff
             padding: 10px 30px
             margin: 30px 0 0 40px
-    .bgc
-        background-color: #35b6c1
     .imgbox
         width: 100%
-        
     @media (max-width: 1000px)
+        .col-md-6
+            display: flex
+            justify-content: center
+            width: 100%
+        .imgbox,.box
+            width: 80%
+        .box
+            margin-top: 20px
+            height: 400px
         .textbox
             h1
                 font-size: 40px
             .btn
                 font-size: 16px
-    @media (max-width: 770px)
-        .bgc
-            margin-top: 30px
-        .textbox
-            h1
-                margin-top: 30px
-            .btn
-                margin-bottom: 30px
-        
-        
+    @media (max-width: 500px)
+        .box
+            .textbox
+                h1
+                    font-size: 30px
