--- a/_header.sass
+++ b/_header.sass
@@ -22,3 +22,10 @@ header
             a
                 font-size: 14px
                 margin-right: 10px
+    @media (max-width: 350px)
+        .menu
+            flex-direction: column
+            align-items: center
+            text-align: center
+        nav
+            margin-top: 10px
