--- a/style.css
+++ b/style.css
@@ -45,6 +45,16 @@ header nav .home-color {
     margin-right: 10px;
   }
 }
+@media (max-width: 350px) {
+  header .menu {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  header nav {
+    margin-top: 10px;
+  }
+}
 
 #beautiful {
   background-color: #f4fafb;
